--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-loader": "^4.1.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-share": "^2.1.1",
     "redux": "^3.7.2",
     "resolve-url-loader": "^2.3.0",
     "whatwg-fetch": "^2.0.4"
